sem_6/compilers/compiler/code/a.output
Terminals unused in grammar

   INCLUDE
   DOT
   '<'
   '>'


State 80 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce
State 82 conflicts: 2 shift/reduce
State 83 conflicts: 2 shift/reduce
State 84 conflicts: 2 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 139 conflicts: 3 shift/reduce
State 158 conflicts: 2 shift/reduce
State 176 conflicts: 1 shift/reduce
State 181 conflicts: 7 shift/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Function
    2      | Declaration

    3 Declaration: Type Assignment ';'
    4            | Assignment ';'
    5            | FunctionCall ';'
    6            | ArrayUsage ';'
    7            | Type ArrayUsage ';'
    8            | StructStmt ';'
    9            | error

   10 Assignment: ID '=' Assignment
   11           | ID '=' FunctionCall
   12           | ID '=' ArrayUsage
   13           | ArrayUsage '=' Assignment
   14           | ID ',' Assignment
   15           | NUM ',' Assignment
   16           | ID '+' Assignment
   17           | ID '-' Assignment
   18           | ID '*' Assignment
   19           | ID '/' Assignment
   20           | NUM '+' Assignment
   21           | NUM '-' Assignment
   22           | NUM '*' Assignment
   23           | NUM '/' Assignment
   24           | NUM OR Assignment
   25           | NUM AND Assignment
   26           | NUM LE Assignment
   27           | NUM GE Assignment
   28           | NUM NE Assignment
   29           | NUM EQ Assignment
   30           | NUM GT Assignment
   31           | NUM LT Assignment
   32           | ID OR Assignment
   33           | ID AND Assignment
   34           | ID LE Assignment
   35           | ID GE Assignment
   36           | ID NE Assignment
   37           | ID EQ Assignment
   38           | ID GT Assignment
   39           | ID LT Assignment
   40           | INC Assignment
   41           | Assignment INC
   42           | DEC Assignment
   43           | Assignment DEC
   44           | PERCENT Assignment
   45           | AMPERSEND Assignment
   46           | '{' Assignment '}'
   47           | NUM
   48           | ID

   49 FunctionCall: ID '(' ')'
   50             | ID '(' Assignment ')'

   51 ArrayUsage: ID '[' Assignment ']'
   52           | ID '[' Assignment ']' '[' Assignment ']'

   53 Function: Type ID '(' ArgListOpt ')' CompoundStmt

   54 ArgListOpt: ArgList
   55           | %empty

   56 ArgList: ArgList ',' Arg
   57        | Arg

   58 Arg: Type ID

   59 CompoundStmt: '{' StmtList '}'

   60 StmtList: StmtList Stmt
   61         | %empty

   62 Stmt: WhileStmt
   63     | Declaration
   64     | ForStmt
   65     | IfStmt
   66     | PrintFunc
   67     | ScanFunc
   68     | SwitchFunc
   69     | CaseStmt
   70     | BreakFunc
   71     | Assignment
   72     | ';'

   73 Type: INT
   74     | FLOAT
   75     | CHAR
   76     | DOUBLE
   77     | VOID

   78 WhileStmt: WHILE '(' Expr ')' Stmt
   79          | WHILE '(' Expr ')' CompoundStmt

   80 ForStmt: FOR '(' Type Expr ';' Expr ';' Expr ')' '{' StmtList '}'
   81        | FOR '(' Expr ';' Expr ';' Expr ')' CompoundStmt
   82        | FOR '(' Expr ')' Stmt
   83        | FOR '(' Expr ')' CompoundStmt

   84 IfStmt: IF '(' Expr ')' Stmt ELSE Stmt
   85       | IF '(' Expr ')' Stmt
   86       | IF '(' Expr ')' Stmt ELSE CompoundStmt
   87       | IF '(' Expr ')' CompoundStmt
   88       | IF '(' Expr ')' CompoundStmt ELSE CompoundStmt

   89 StructStmt: STRUCT ID '{' Type Assignment '}'

   90 PrintFunc: PRINTF '(' '"' Expr '"' ')' ';'
   91          | PRINTF '(' '"' ExprList '"' ')' ';'
   92          | PRINTF '(' '"' Expr '"' ',' Expr ')' ';'

   93 ScanFunc: SCANF '(' '"' ExprList '"' ',' Expr ')' ';'

   94 CaseStmt: CASE NUM ':' Stmt

   95 BreakFunc: BREAK ';'

   96 SwitchFunc: SWITCH '(' Expr ')' '{' StmtList '}'

   97 ExprList: ExprList Expr
   98         | Expr

   99 Expr: Assignment
  100     | ArrayUsage


Terminals, with rules where they appear

$end (0) 0
'"' (34) 90 91 92 93
'(' (40) 49 50 53 78 79 80 81 82 83 84 85 86 87 88 90 91 92 93 96
')' (41) 49 50 53 78 79 80 81 82 83 84 85 86 87 88 90 91 92 93 96
'*' (42) 18 22
'+' (43) 16 20
',' (44) 14 15 56 92 93
'-' (45) 17 21
'/' (47) 19 23
':' (58) 94
';' (59) 3 4 5 6 7 8 72 80 81 90 91 92 93 95
'<' (60)
'=' (61) 10 11 12 13
'>' (62)
'[' (91) 51 52
']' (93) 51 52
'{' (123) 46 59 80 89 96
'}' (125) 46 59 80 89 96
error (256) 9
INT (258) 73
FLOAT (259) 74
CHAR (260) 75
DOUBLE (261) 76
VOID (262) 77
FOR (263) 80 81 82 83
WHILE (264) 78 79
SWITCH (265) 96
CASE (266) 94
BREAK (267) 95
IF (268) 84 85 86 87 88
ELSE (269) 84 86 88
PRINTF (270) 90 91 92
SCANF (271) 93
STRUCT (272) 89
NUM (273) 15 20 21 22 23 24 25 26 27 28 29 30 31 47 94
ID (274) 10 11 12 14 16 17 18 19 32 33 34 35 36 37 38 39 48 49 50 51
    52 53 58 89
INCLUDE (275)
DOT (276)
AND (277) 25 33
OR (278) 24 32
LE (279) 26 34
GE (280) 27 35
EQ (281) 29 37
NE (282) 28 36
LT (283) 31 39
GT (284) 30 38
INC (285) 40 41
DEC (286) 42 43
PERCENT (287) 44
AMPERSEND (288) 45


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
start (52)
    on left: 1 2, on right: 0
Declaration (53)
    on left: 3 4 5 6 7 8 9, on right: 2 63
Assignment (54)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48,
    on right: 3 4 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 50 51 52
    71 89 99
FunctionCall (55)
    on left: 49 50, on right: 5 11
ArrayUsage (56)
    on left: 51 52, on right: 6 7 12 13 100
Function (57)
    on left: 53, on right: 1
ArgListOpt (58)
    on left: 54 55, on right: 53
ArgList (59)
    on left: 56 57, on right: 54 56
Arg (60)
    on left: 58, on right: 56 57
CompoundStmt (61)
    on left: 59, on right: 53 79 81 83 86 87 88
StmtList (62)
    on left: 60 61, on right: 59 60 80 96
Stmt (63)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 60 78 82 84
    85 86 94
Type (64)
    on left: 73 74 75 76 77, on right: 3 7 53 58 80 89
WhileStmt (65)
    on left: 78 79, on right: 62
ForStmt (66)
    on left: 80 81 82 83, on right: 64
IfStmt (67)
    on left: 84 85 86 87 88, on right: 65
StructStmt (68)
    on left: 89, on right: 8
PrintFunc (69)
    on left: 90 91 92, on right: 66
ScanFunc (70)
    on left: 93, on right: 67
CaseStmt (71)
    on left: 94, on right: 69
BreakFunc (72)
    on left: 95, on right: 70
SwitchFunc (73)
    on left: 96, on right: 68
ExprList (74)
    on left: 97 98, on right: 91 93 97
Expr (75)
    on left: 99 100, on right: 78 79 80 81 82 83 84 85 86 87 88 90
    92 93 96 97 98


State 0

    0 $accept: . start $end

    error      shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    CHAR       shift, and go to state 4
    DOUBLE     shift, and go to state 5
    VOID       shift, and go to state 6
    STRUCT     shift, and go to state 7
    NUM        shift, and go to state 8
    ID         shift, and go to state 9
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    start         go to state 15
    Declaration   go to state 16
    Assignment    go to state 17
    FunctionCall  go to state 18
    ArrayUsage    go to state 19
    Function      go to state 20
    Type          go to state 21
    StructStmt    go to state 22


State 1

    9 Declaration: error .

    $default  reduce using rule 9 (Declaration)


State 2

   73 Type: INT .

    $default  reduce using rule 73 (Type)


State 3

   74 Type: FLOAT .

    $default  reduce using rule 74 (Type)


State 4

   75 Type: CHAR .

    $default  reduce using rule 75 (Type)


State 5

   76 Type: DOUBLE .

    $default  reduce using rule 76 (Type)


State 6

   77 Type: VOID .

    $default  reduce using rule 77 (Type)


State 7

   89 StructStmt: STRUCT . ID '{' Type Assignment '}'

    ID  shift, and go to state 23


State 8

   15 Assignment: NUM . ',' Assignment
   20           | NUM . '+' Assignment
   21           | NUM . '-' Assignment
   22           | NUM . '*' Assignment
   23           | NUM . '/' Assignment
   24           | NUM . OR Assignment
   25           | NUM . AND Assignment
   26           | NUM . LE Assignment
   27           | NUM . GE Assignment
   28           | NUM . NE Assignment
   29           | NUM . EQ Assignment
   30           | NUM . GT Assignment
   31           | NUM . LT Assignment
   47           | NUM .

    AND  shift, and go to state 24
    OR   shift, and go to state 25
    LE   shift, and go to state 26
    GE   shift, and go to state 27
    EQ   shift, and go to state 28
    NE   shift, and go to state 29
    LT   shift, and go to state 30
    GT   shift, and go to state 31
    ','  shift, and go to state 32
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36

    $default  reduce using rule 47 (Assignment)


State 9

   10 Assignment: ID . '=' Assignment
   11           | ID . '=' FunctionCall
   12           | ID . '=' ArrayUsage
   14           | ID . ',' Assignment
   16           | ID . '+' Assignment
   17           | ID . '-' Assignment
   18           | ID . '*' Assignment
   19           | ID . '/' Assignment
   32           | ID . OR Assignment
   33           | ID . AND Assignment
   34           | ID . LE Assignment
   35           | ID . GE Assignment
   36           | ID . NE Assignment
   37           | ID . EQ Assignment
   38           | ID . GT Assignment
   39           | ID . LT Assignment
   48           | ID .
   49 FunctionCall: ID . '(' ')'
   50             | ID . '(' Assignment ')'
   51 ArrayUsage: ID . '[' Assignment ']'
   52           | ID . '[' Assignment ']' '[' Assignment ']'

    '='  shift, and go to state 37
    AND  shift, and go to state 38
    OR   shift, and go to state 39
    LE   shift, and go to state 40
    GE   shift, and go to state 41
    EQ   shift, and go to state 42
    NE   shift, and go to state 43
    LT   shift, and go to state 44
    GT   shift, and go to state 45
    ','  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '('  shift, and go to state 51
    '['  shift, and go to state 52

    $default  reduce using rule 48 (Assignment)


State 10

   40 Assignment: INC . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 54
    ArrayUsage  go to state 55


State 11

   42 Assignment: DEC . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 56
    ArrayUsage  go to state 55


State 12

   44 Assignment: PERCENT . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 57
    ArrayUsage  go to state 55


State 13

   45 Assignment: AMPERSEND . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 58
    ArrayUsage  go to state 55


State 14

   46 Assignment: '{' . Assignment '}'

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 59
    ArrayUsage  go to state 55


State 15

    0 $accept: start . $end

    $end  shift, and go to state 60


State 16

    2 start: Declaration .

    $default  reduce using rule 2 (start)


State 17

    4 Declaration: Assignment . ';'
   41 Assignment: Assignment . INC
   43           | Assignment . DEC

    INC  shift, and go to state 61
    DEC  shift, and go to state 62
    ';'  shift, and go to state 63


State 18

    5 Declaration: FunctionCall . ';'

    ';'  shift, and go to state 64


State 19

    6 Declaration: ArrayUsage . ';'
   13 Assignment: ArrayUsage . '=' Assignment

    '='  shift, and go to state 65
    ';'  shift, and go to state 66


State 20

    1 start: Function .

    $default  reduce using rule 1 (start)


State 21

    3 Declaration: Type . Assignment ';'
    7            | Type . ArrayUsage ';'
   53 Function: Type . ID '(' ArgListOpt ')' CompoundStmt

    NUM        shift, and go to state 8
    ID         shift, and go to state 67
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 68
    ArrayUsage  go to state 69


State 22

    8 Declaration: StructStmt . ';'

    ';'  shift, and go to state 70


State 23

   89 StructStmt: STRUCT ID . '{' Type Assignment '}'

    '{'  shift, and go to state 71


State 24

   25 Assignment: NUM AND . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 72
    ArrayUsage  go to state 55


State 25

   24 Assignment: NUM OR . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 73
    ArrayUsage  go to state 55


State 26

   26 Assignment: NUM LE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 74
    ArrayUsage  go to state 55


State 27

   27 Assignment: NUM GE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 75
    ArrayUsage  go to state 55


State 28

   29 Assignment: NUM EQ . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 76
    ArrayUsage  go to state 55


State 29

   28 Assignment: NUM NE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 77
    ArrayUsage  go to state 55


State 30

   31 Assignment: NUM LT . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 78
    ArrayUsage  go to state 55


State 31

   30 Assignment: NUM GT . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 79
    ArrayUsage  go to state 55


State 32

   15 Assignment: NUM ',' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 80
    ArrayUsage  go to state 55


State 33

   20 Assignment: NUM '+' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 81
    ArrayUsage  go to state 55


State 34

   21 Assignment: NUM '-' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 82
    ArrayUsage  go to state 55


State 35

   22 Assignment: NUM '*' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 83
    ArrayUsage  go to state 55


State 36

   23 Assignment: NUM '/' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 84
    ArrayUsage  go to state 55


State 37

   10 Assignment: ID '=' . Assignment
   11           | ID '=' . FunctionCall
   12           | ID '=' . ArrayUsage

    NUM        shift, and go to state 8
    ID         shift, and go to state 9
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment    go to state 85
    FunctionCall  go to state 86
    ArrayUsage    go to state 87


State 38

   33 Assignment: ID AND . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 88
    ArrayUsage  go to state 55


State 39

   32 Assignment: ID OR . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 89
    ArrayUsage  go to state 55


State 40

   34 Assignment: ID LE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 90
    ArrayUsage  go to state 55


State 41

   35 Assignment: ID GE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 91
    ArrayUsage  go to state 55


State 42

   37 Assignment: ID EQ . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 92
    ArrayUsage  go to state 55


State 43

   36 Assignment: ID NE . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 93
    ArrayUsage  go to state 55


State 44

   39 Assignment: ID LT . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 94
    ArrayUsage  go to state 55


State 45

   38 Assignment: ID GT . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 95
    ArrayUsage  go to state 55


State 46

   14 Assignment: ID ',' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 96
    ArrayUsage  go to state 55


State 47

   16 Assignment: ID '+' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 97
    ArrayUsage  go to state 55


State 48

   17 Assignment: ID '-' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 98
    ArrayUsage  go to state 55


State 49

   18 Assignment: ID '*' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 99
    ArrayUsage  go to state 55


State 50

   19 Assignment: ID '/' . Assignment

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 100
    ArrayUsage  go to state 55


State 51

   49 FunctionCall: ID '(' . ')'
   50             | ID '(' . Assignment ')'

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14
    ')'        shift, and go to state 101

    Assignment  go to state 102
    ArrayUsage  go to state 55


State 52

   51 ArrayUsage: ID '[' . Assignment ']'
   52           | ID '[' . Assignment ']' '[' Assignment ']'

    NUM        shift, and go to state 8
    ID         shift, and go to state 53
    INC        shift, and go to state 10
    DEC        shift, and go to state 11
    PERCENT    shift, and go to state 12
    AMPERSEND  shift, and go to state 13
    '{'        shift, and go to state 14

    Assignment  go to state 103
    ArrayUsage  go to state 55


State 53

   10 Assignment: ID . '=' Assignment
   11           | ID . '=' FunctionCall
   12           | ID . '=' ArrayUsage
   14           | ID . ',' Assignment
   16           | ID . '+' Assignment
   17           | ID . '-' Assignment
   18           | ID . '*' Assignment
   19           | ID . '/' Assignment
   32           | ID . OR Assignment
   33           | ID . AND Assignment
   34           | ID . LE Assignment
   35           | ID . GE Assignment
   36           | ID . NE Assignment
   37           | ID . EQ Assignment
   38           | ID . GT Assignment
   39           | ID . LT Assignment
   48           | ID .
   51 ArrayUsage: ID . '[' Assignment ']'
   52           | ID . '[' Assignment ']' '[' Assignment ']'

    '='  shift, and go to state 37
    AND  shift, and go to state 38
    OR   shift, and go to state 39
    LE   shift, and go to state 40
    GE   shift, and go to state 41
    EQ   shift, and go to state 42
    NE   shift, and go to state 43
    LT   shift, and go to state 44
    GT   shift, and go to state 45
    ','  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '['  shift, and go to state 52

    $default  reduce using rule 48 (Assignment)


State 54

   40 Assignment: INC Assignment .
   41           | Assignment . INC
   43           | Assignment . DEC

    $default  reduce using rule 40 (Assignment)


State 55

   13 Assignment: ArrayUsage . '=' Assignment

    '='  shift, and go to state 65


State 56

   41 Assignment: Assignment . INC
   42           | DEC Assignment .
   43           | Assignment . DEC

    $default  reduce using rule 42 (Assignment)


State 57

   41 Assignment: Assignment . INC
   43           | Assignment . DEC
   44           | PERCENT Assignment .

    $default  reduce using rule 44 (Assignment)


State 58

   41 Assignment: Assignment . INC
   43           | Assignment . DEC
   45           | AMPERSEND Assignment .

    $default  reduce using rule 45 (Assignment)


State 59

   41 Assignment: Assignment . INC
   43           | Assignment . DEC
   46           | '{' Assignment . '}'

    INC  shift, and go to state 61
    DEC  shift, and go to state 62
    '}'  shift, and go to state 104


State 60

    0 $accept: start $end .

    $default  accept


State 61

   41 Assignment: Assignment INC .

    $default  reduce using rule 41 (Assignment)


State 62

   43 Assignment: Assignment DEC .

    $default  reduce using rule 43 (Assignment)

